# library

./: .gitmodules  README.md
docker/01_k8sBatch/: notes.txt
docker/01_k8sBatch/batchwrapper/: build.sbt
docker/02_smashbox/: Dockerfile  init-docker.sh
exercises/01_BasicCSS/Solution/: indexSolution.html  styleSolution.css
exercises/03_ChristmasTree/: indexSolution.html  ot_soln.html
exercises/04_JS_Bars/: discussion.html  index.html  soln.html
exercises/06_JSON_SVG/: index.html
exercises/07-08_Scales_Axes/: soln.html
exercises/09_Lines/: index.html
exercises/10_BitCoin/: discussion.html  index.html  solution.html
exercises/11_Repaint/: discussion.html  solution.html
exercises/12_Pi/: index.html
experiments/: 03_Fullscreen.html
go/01_hello_unicorn/: hello.go
go/02_hello_keyboard/: hello.go
go/03_unicorn_test/: go.mod  main.go
go/04_ubercorn/: display.go  go.mod  go.sum  keyboard.go  main.go  notes.md
go/05_bits/: go.mod  json.go  relative-load.go
go/05_bits/config/: data.txt
java/01_general/: .gitignore  pom.xml
java/spikes/01_MavenMongoTest/: pom.xml
js/exercises/01_BasicCSS/: index.html  style.css
js/exercises/02_CowNews/: index.html  soln.html
js/exercises/03_ChristmasTree/: index.html
js/exercises/05_EnterExitUpdate/: index.html  soln.html
js/exercises/06_JSON_SVG/: soln.html
js/exercises/07-08_Scales_Axes/: index.html
js/exercises/09_Lines/: soln.html
js/exercises/11_Repaint/: index.html
js/exercises/12_Pi/: solution.html
js/spikes/: 15_FeatureMap.html  16_KDE.html  18_SubPlots.html  19_httpping.html  20_httpping.html
js/spikes/01_http/: http.js
js/spikes/02_express/: express.js
js/spikes/03_expressApp/: package.json
js/spikes/04_jquery/: index.html  package.json
js/spikes/05_config/: app.js  config.js
js/spikes/06_plotly/: density.html  index.html  package.json  posterior.html  posterior.json  subplot.html
js/spikes/08_geojson/: gfg.geojson  index.html  script.js  (+1 more)
python/: 04_EV3.code-workspace  notes.md
python/01_javaipc/: .gitignore
python/02_zipHalo/: 01_simple.py  02_compass.py  03_swirls.py  04_timer.py  05_8ball_unfinished.py  README.md
python/03_allPixel/: 01.py  02.py  notes.md
python/04_EV3/: robot.py  us.py
python/05_scrollBit/: converted.html  main.py  medal.py  new.py  notes.md  operations.py  readMe.html  readMe.md  recursionTest.py  scrollbit.py
python/06_micropixeledge/: sleepy.py
python/08_RPI_LEDs/: unicornhd.py
python/09_mongodb/: import.py  query.py
python/10_conda_env/: environment.yml  functions.ipynb  iris.ipynb  notebook.ipynb  notes.md  percentiles.py
python/10_percentiles_conda/: notes.md
python/11_sysadmin/: LiFePO4wered-Pi.py  test.py  testing.py
python/12_strings/: agenda.md  notes.md  strings.ipynb
python/13_sublib/: main.py
python/14_auto_venv/: .gitignore
python/15_uv/: readme.md  script.py
rust/01_tauleap/: Cargo.toml
rust/01_tauleap/src/: leap.rs  lib.rs  main.rs
rust/01_tauleap/src/epi/: environment.rs  mod.rs  state.rs
rust/01_tauleap/src/leap/: cached.rs  mod.rs  params.rs
rust/01_tauleap/tests/: leaptest.rs
rust/03_old_unicorn/: Cargo.toml
rust/03_ubercorn/: Cargo.toml  more_json.rs  notes.md
rust/03_ubercorn/.cargo/: config
rust/03_ubercorn/assets/: ubercorn.service
rust/03_ubercorn/resources/: sheep.json  zombie.json
rust/03_ubercorn/src/: display.rs  error.rs  filesystem.rs  input_device.rs  kbgrab.rs  lib.rs  main.rs  monitor.rs  pixel.rs  sheep.rs
rust/03_ubercorn/src/art/: mod.rs  zombie.rs
rust/03_ubercorn/src/deleteme/: mod.rs  sheep.rs  zombie.rs
rust/03_ubercorn/src/display/: mod.rs  pixel.rs
rust/03_ubercorn/src/keyboard/: device.rs  mod.rs  monitor.rs
rust/03_ubercorn/src/pimoroni/: mod.rs  unicornhatmini.rs
rust/03_unicorn/: Cargo.toml
rust/04_Ferrous/: Cargo.toml
rust/04_testing/: Cargo.toml
rust/05_sockets/: socket-test.py  socket.rs
rust/06_julia_ffi/: Cargo.toml  build.rs  function.jl  run_bindgen.sh
rust/07_plotterstest/: Cargo.toml  notes.md
rust/08_vegalite/: .gitignore  Cargo.toml  notes.md
rust/09_hello_cli/: .gitignore  Cargo.toml
rust/09_hello_cli/resources/: config.toml
rust/09_hello_cli/src/: lib.rs
rust/10_cli_pass/: Cargo.toml
rust/10_cli_pass/src/: main.rs
rust/10_shuffle/: Cargo.toml
rust/11_more_sockets/: Cargo.toml  notes.nd
rust/11_pam/: Cargo.toml  notes.md
rust/12_wasm/: Cargo.toml  index.html  readme.md
rust/12_wasm/data/: outline.json  test.json
rust/12_wasm/src/: app.rs  data.rs  lib.rs  plot.rs
rust/13_battleships/: Cargo.toml
rust/13_battleships/src/: display.rs  keyboard.rs  lib.rs  main.rs  types.rs
rust/13_tower_defense/: Cargo.toml
rust/13_tower_defense/src/: error.rs  grid.rs  keys.rs  main.rs  types.rs
rust/14_windows/: Cargo.toml
rust/14_windows/src/: main.rs  tunnel.rs
rust/15_game_of_life/: Cargo.toml
rust/15_game_of_life/src/: coords.rs  dimensions.rs  grid.rs  layer.rs  lib.rs  main.rs
rust/17_file_watch/: Cargo.toml
rust/18_alarm-light/: Cargo.toml
rust/18_alarm-light/resources/: colours.csv
rust/18_alarm-light/resources/Anna/: colours.csv  pixels.csv
rust/18_alarm-light/resources/Rowan/: colours.csv  pixels.csv
rust/18_alarm-light/src/: image.rs  main.rs  rotation.rs
rust/19_cpu/: Cargo.toml  build_and_install.py
rust/19_cpu/debian/: service
rust/19_cpu/src/: main.rs
rust/19_unicorn_sys_monitor/: readme.txt
rust/20_command/: Cargo.toml  Mambaforge-Linux-aarch64.sh.REMOVED.git-id
rust/20_command/src/: main.rs
rust/21_strings/: env_demo.yml  environment.yml  notes.md  test.ipynb
rust/21_win_ssh/: Cargo.toml  todo.md
rust/22_pyo3/: Cargo.toml  notes.md
rust/22_pyo3/src/: lib.rs
rust/23_ssh2/: Cargo.toml
rust/24_s3/: Cargo.toml
rust/24_s3/src/: main.rs
rust/25_traitobj/: Cargo.toml
rust/27_validation/: Cargo.toml
rust/28_model_layers/: Cargo.toml
scala/01_TechForum/: build.sbt
scala/02_modelling/: .gitignore  build.sbt
scala/flink/: build.sbt
vega/: .gitignore  Cargo.toml  notes.md
vega/resources/: installer.sh
vega/src/: lib.rs  main.rs  vega.rs
(+130 files in other folders)
