[package]
name = "tauleap"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

[lib]
name = "tauleap"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
