[package]
name = "ubercorn"
description = "Flash lights on ubercorn on Raspberry Pi Zero"
license = "Unlicense"
version = "0.1.0"
authors = ["tearne"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spidev = "0.4.0"
rand = "0.7.3"
libc = "0.2.79"
nix = "0.17.0"
inotify = { version = "0.8.3", default-features = false, features = [] }

[package.metadata.deb]
depends = "$auto, systemd"
conf-files = []
section = "admin"
priority = "optional"
assets = [
    ["target/arm-unknown-linux-gnueabihf/release/ubercorn", "/usr/local/bin/", "755"],
    ["assets/ubercorn.service", "/etc/systemd/system/", "644"],
    ["resources", "/usr/local/ubercorn", "644"]
]
systemd-units = { enable = true, start = true }
