[package]
name = "hello"
version = "0.1.0"
authors = ["thomdoherty <thomdoherty@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
log = "0.4"
simple-log = "1.0.2"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }