[package]
name = "cli_pass"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.0", features = ["async-await"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"