[package]
name = "wasm"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "=0.2.74", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.24"
eframe = "0.13.0" # Gives us egui, epi and web+native backends
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.22.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console'
]
