[package]
name = "battleships"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.4.0"
rand = "0.8.4"
libc = "0.2.79"
inotify = { version = "0.8.3", default-features = false, features = [] }
tokio = { version = "1.10.0", features = ["full"] }
futures = "0.3.16"
nix = "0.17.0"