[package]
name = "towerdefense"
version = "0.1.0"
authors = ["tearne <tearne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
futures = "0.3.16"
unicorn = { git = "https://github.com/tearne/unicorn", branch = "main"}
rgb = "0.8"