[package]
name = "windows"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
ssh_jumper = "0.4.0"
tokio = { version = "1.13.1", features = ["full"] }