[package]
name = "alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn = { git = "https://github.com/tearne/unicorn", branch = "main"}
csv = "1.1.6"
rgb = "0.8"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15.4"
