[package]
name = "cpunicornhd"
version = "0.1.0"
edition = "2021"
description = "Display CPU usage on Pimoroni Unicorn Hat HD"
license = "MIT"
authors = ["tearne"]

[dependencies]
psutil = "3.2.1"
unicorn = { git = "https://github.com/tearne/unicorn", branch = "main"}
rgb = "0.8"
rand = "0.8.4"

[package.metadata.deb]
depends = "$auto, systemd"
conf-files = []
section = "admin"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = true, start = true }

